# LLM_infer

./: CMakeLists.txt  README.md  Todo.md  user_entry.cpp
examples/: README.md
src/kernels/: CMakeLists.txt  act_kernel.cu  add_residual.cu  add_residual.h  attn_softmax_kernel.cu  build_causal_mask.cu  build_causal_mask.h  cal_paddingoffset.cu  cal_paddingoffset.h  concat_past_kv.cu  cublas_utils.cc  cublas_utils.h  fused_addresidual_norm.cu  fused_decoder_self_attention.cu  fused_transpose_and_remv_pad.cu  input_embedding.cu  linear.cu  linear.h  qkv_bias_and_RoPE.cu  repeat_kv.cu  rmsnorm_kernel.cu  rmsnorm_kernel.h  sampling.cu  test_flashattention.cu  test_flashattention.h  topK.cu  topK.h
src/layers/attention/: CMakeLists.txt  context_attention.cpp  context_attention.h  masked_self_attention.cpp  masked_self_attention.h
src/layers/decoder/: CMakeLists.txt  context_decoder.cpp  context_decoder.h  self_decoder.cpp  self_decoder.h
src/layers/ffn/: CMakeLists.txt  ffn.cpp  ffn.h
src/memory/allocator/: base_allocator.h  cuda_allocator.h
src/models/: CMakeLists.txt  basemodel.h
src/models/llama/: llama.cpp  llama.h  llama_params.h
src/utils/: CMakeLists.txt  cuda_debug_utils.cuh  debug_utils.h  macro.h  model_utils.h  string_utils.h  tensor.h  vectorize_utils.h  weight_utils.cu  weight_utils.h
src/weights/: base_weights.h
src/weights/llama/: attention_weights.h  embedding_weights.h  layer_weights.cc  layer_weights.h  llama_weights.cc  llama_weights.h
tests/unittests/: CMakeLists.txt  test_act.cu  test_bias_and_RoPE.cu  test_cal_paddingoffset.cu  test_causal_mask.cu  test_concat_kv.cu  test_fused_addresidual_norm.cu  test_fused_decoder_attention.cu  test_fused_trans_remv_pad.cu  test_input_embedding.cu  test_linear.cu  test_mask_softmax.cu  test_repeat_kv.cu  test_residual.cu  test_rmsnorm.cu  test_sampling.cu  test_topk.cu
tools/: README.md  convert_downloaded_llama_weights.py  weights_convert.py
